--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
